# mas-orchestration-demo

./: .env.example  config.yaml  demo.md  main.py  pyproject.toml  run_servers.sh
scripts/: test_phase2.py
src/demo_mas/: main.py
src/demo_mas/agents/: agent_builder.py
src/demo_mas/common/: prompts.py  schema.py  setup.py  utils.py
src/demo_mas/mcp_servers/: math_server.py  text_server.py
src/demo_mas/processors/: linear_processor.py  query_processor.py  supervisor_processor.py  swarm_processor.py
src/demo_mas/tools/: math_tools.py  text_tools.py  tool_registry.py
