[project]
name = "demo-mas"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-openai>=0.2",
    "fastmcp>=2.13",
    "mcp>=1.0",
    "pydantic>=2.0",
    "python-dotenv",
    "pyyaml",
    "loguru",
    "httpx",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_mas"]
